feat: add get schedule by id
