# app/Domains/Dashboard/Infrastructure/Services/DashboardServiceAdapter.php
@@ -5,11 +5,11 @@ namespace App\Domains\Dashboard\Infrastructure\Services;
 use App\Domains\Dashboard\Ports\DashboardServicePort;
 use App\Domains\Notification\Actions\GetNotifByUserIdAction;
 use App\Domains\Penalty\Actions\GetUserWarningAction;
-use App\Domains\Schedule\Actions\GetStudentScheduleAction;
 use App\Domains\Student\Actions\GetStudentByIdAction;
 use App\Domains\Tutor\Actions\GetTutorByCriteria;
 use App\Domains\FileManager\Ports\FileRepositoryInterface;
 use App\Domains\FileManager\Ports\FileStorageInterface;
+use App\Domains\Schedule\Actions\GetStudentSchedulesByDateAction;
 use Carbon\Carbon;
 use Illuminate\Contracts\Pagination\LengthAwarePaginator;
 
@@ -22,7 +22,7 @@ class DashboardServiceAdapter implements DashboardServicePort
         protected FileRepositoryInterface $fileRepository,
         protected FileStorageInterface $storage,
         protected GetUserWarningAction $userWarningAction,
-        protected GetStudentScheduleAction $scheduleAction,
+        protected GetStudentSchedulesByDateAction $scheduleAction,
     ) {}
 
     public function studentHomePage(int $studentId, int $notifPaginate, int $tutorPaginate)
