# app/Domains/Schedule/Infrastructure/Repository/EloquentScheduleRepository.php
@@ -2,10 +2,11 @@
 
 namespace App\Domains\Schedule\Infrastructure\Repository;
 
+use App\Domains\Schedule\Entities\ScheduleEntity;
 use App\Domains\Schedule\Ports\ScheduleRepositoryInterface;
+use App\Models\Schedule;
 use App\Models\Student;
 use App\Models\Tutor;
-use App\Shared\Enums\RoleEnum;
 use Carbon\Carbon;
 use Illuminate\Contracts\Pagination\LengthAwarePaginator;
 
@@ -18,7 +19,7 @@ class EloquentScheduleRepository implements ScheduleRepositoryInterface
         return true;
     }
 
-    public function getStudentSchedule(int $studentId, Carbon $date, int $paginate = 10): LengthAwarePaginator
+    public function getStudentSchedulesByDate(int $studentId, Carbon $date, int $paginate = 10): LengthAwarePaginator
     {
         $student = Student::where('user_id', $studentId)->firstOrFail();
         
@@ -26,5 +27,30 @@ class EloquentScheduleRepository implements ScheduleRepositoryInterface
             ->whereDate('date', $date->toDateString())
             ->with('tutor.user', 'subject')
             ->paginate($paginate);
+    }
+
+    public function getScheduleById(int $scheduleId): ScheduleEntity
+    {
+        $schedule = Schedule::with('tutor.user', 'student.user', 'subject')
+            ->findOrFail($scheduleId);
+
+        return new ScheduleEntity(
+            id: $schedule->id,
+            tutorId: $schedule->tutor_id,
+            studentId: $schedule->student_id,
+            subjectId: $schedule->subject_id,
+            date: $schedule->date,
+            startTime: $schedule->time,
+            endTime: Carbon::createFromFormat('H:i:s', $schedule->time)->addHour()->format('H:i:s'),
+            status: $schedule->status->value,
+            learningMethod: $schedule->learning_method,
+            meetingLink: $schedule->meeting_link,
+            address: $schedule->address,
+            tutorName: $schedule->tutor?->user?->name,
+            subjectName: $schedule->subject?->name,
+            studentName: $schedule->student?->user?->name,
+            tutorTelephoneNumber: $schedule->tutor?->user?->telephone_number,
+            studentTelephoneNumber: $schedule->student?->user?->telephone_number
+        );
     }
 }
