# app/Domains/Schedule/Ports/ScheduleRepositoryInterface.php
@@ -2,11 +2,13 @@
 
 namespace App\Domains\Schedule\Ports;
 
+use App\Domains\Schedule\Entities\ScheduleEntity;
 use Carbon\Carbon;
 use Illuminate\Contracts\Pagination\LengthAwarePaginator;
 
 interface ScheduleRepositoryInterface
 {
     public function createTutorAvailabilitySchedule(int $tutorId, array $data): bool;
-    public function getStudentSchedule(int $studentId, Carbon $date, int $paginate = 10): LengthAwarePaginator;
+    public function getStudentSchedulesByDate(int $studentId, Carbon $date, int $paginate = 10): LengthAwarePaginator;
+    public function getScheduleById(int $scheduleId): ScheduleEntity;
 }
